# 38_5_1_Red_Button

./: CMakeLists.txt  imagebutton.cpp  imagebutton.h  main.cpp  res.qrc
